@@ -1,3 +1,10 @@
+2008-09-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c (_bfd_elf_init_private_section_data): Tweak union copy.
+	(bfd_section_from_shdr): Don't change SHT_GROUP section name.
+	* elflink.c (section_signature): New function.
+	(_bfd_elf_section_already_linked): Use it.
+
 2008-09-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-ppc.c (ppc_elf_finish_dynamic_sections): Handle vxworks
